# sample-etl

./: .gitignore  README.md  pyproject.toml
src/: config.py  generate.py  ingest.py  returns.py  transform.py
tests/: ingest_test.py  returns_test.py  transform_test.py
